--- a/blogspot.html
+++ b/blogspot.html
@@ -13,6 +13,15 @@
                     cosas increibles que se pueden
                     hacer con ramas.
                 </p>
+                <p>
+                    Los blogs son la mejor forma
+                    de compartir información y tus
+                    ideas.
+                    Mucho mas que salir en conferencias
+                    o salir en Youtube. Excepto si eres 
+                    un rockstar. Pero estadisticamente
+                    no lo eres..... por ahora.
+                </p>
             </div>
             
         </div> 
