--- a/blogspot.html
+++ b/blogspot.html
@@ -8,7 +8,7 @@
             <div id ="cabecera">
                 Hyperblog
                 <span id="tagline">
-                    Tu blog de confianza
+                    Tu blog maestro
                 </span>
             </div>
             <div id="post">
@@ -27,6 +27,9 @@
                     o salir en Youtube. Excepto si eres 
                     un rockstar. Pero estadisticamente
                     no lo eres..... por ahora.
+                </p>
+                <p>
+                    Suscribete y dale like
                 </p>
             </div>
             
