Agregue una imagen al blog

--- a/blogspot.html
+++ b/blogspot.html
@@ -20,6 +20,7 @@
                     cosas increibles que se pueden
                     hacer con ramas.
                 </p>
+                <p><img src="imagenes/universe.jpeg" width="100%"></p>
                 <p>
                     Los blogs son la mejor forma
                     de compartir información y tus
